--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "eslint-plugin-prettier-vue": "^3.1.0",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.10",
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.6",
+    "vue-template-compiler": "^2.6.11",
     "vuex": "^4.0.2"
   }
 }
