--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "core-js": "^3.6.5",
     "eslint-plugin-prettier-vue": "^3.1.0",
     "postcss": "^7",
+    "sockjs-client": "^1.5.1",
+    "stompjs": "^2.3.3",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
