--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "stompjs": "^2.3.3",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^2.6.11",
+    "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.1.6",
     "vue-template-compiler": "^2.6.11",
     "vuex": "^4.0.2"
